<resources>
    <string name="app_name">Instant Visio</string>


    <string name="title">Instant Visio</string>
    <string name="explanation_text">Saisissez le numéro de téléphone mobile \nou l\'email de la personne que vous souhaitez rejoindre en visiophonie\n(vous pouvez saisir les deux).\n\nUn message sera envoyé pour que votre proche puisse vous rejoindre directement en visiophonie et échanger avec vous.</string>
    <string name="name_title">Votre nom</string>
    <string name="name_hint"></string>

    <string name="phone_title">Numéro de téléphone de votre proche</string>
    <string name="phone_hint">(mobile uniquement)</string>
    <string name="email_title">Email de votre proche</string>
    <string name="email_hint">(optionnel si vous avez saisi un numéro)</string>
    <string name="launch">Joindre mon proche</string>
    <string name="message_beginning">Bonjour</string>
    <string name="has_name">, C\'est  </string>
    <string name="message_end">, je voudrais que tu me rejoignes en visio en cliquant sur ce lien\n</string>
    <string name="toast_missing_data">Il faut au moins saisir une méthode de contact (numéro de téléphone mobile, email).</string>
    <string name="toast_launching">Lancement de la visiophonie.</string>
    <string name="toast_invite_and_launch_visio">Invitation envoyé par sms. Lancement de la visiophonie.</string>

    <string name="disclaimer_title">Informations personnelles\net autorisations</string>
    <string name="disclaimer_text">L\'application Instant Visio est dédiée aux personnes isolées sans moyen de communication (en soins intensifs, hospitalisées, en établissements confinés), au personnel soignant et aux aidants qui les accompagnent, ainsi qu\'aux familles.\n\nElle fonctionne sans inscription et ne stocke aucune donnée personnelle.\n\nIl suffit de saisir le téléphone ou l’email du proche à contacter pour qu’une invitation lui soit envoyée : celui-ci recevra un lien internet lui donnant directement accès à la visiophonie dès validation des autorisations d’accès au microphone et à la caméra.\n\nNous nous tenons à la disposition du personnel soignant et des aidants pour toute information ou aide à l’utilisation, ainsi que pour recevoir toute recommandation d’amélioration à l’adresse instantvisioapp@gmail.com.\n\nNi l’application ni ses serveurs ne stockent de données personnelles.\n\nL’application a été développée dans le cadre du Health Hack Camp 2020 initié à Strasbourg.\n\nPour fonctionner l’application a besoin de l’autorisation suivante : “Envoi de SMS”.  \nCette autorisation permet à l’application le SMS contenant le lien internet par lequel le proche va rejoindre la visiophonie. Selon votre abonnement et le numéro que vous souhaitez joindre, des frais peuvent exister, comme pour tout SMS que vous enverriez à partir de la messagerie de votre téléphone.</string>
    <string name="accept">Accepter</string>
    <string name="abort">Refuser</string>
    <string name="accept_permissions">Veuillez accepter les permissions afin de démarrer la visioconférence</string>
    <string name="accept_sms_permissions">Veuillez accepter la permission afin d\'envoyer l\'invitation par SMS</string>
    <string name="error_sending_sms">Le SMS n\'a pa pu être envoyé</string>
    <string name="error_phone_number_min_length">Le numéro specifié doit avoir au moins 6 caractères</string>
    <string name="error_invalid_email">L\'email n\'est pas valide</string>
    <string name="error_invalid_name">Veuillez indiquer votre nom</string>
</resources>
